# TDMSViewer

./: .gitignore  README.md  pyproject.toml
src/adclm/: cli.py
src/core/: __init__.py  datasource.py  plot.py  plotstack.py
src/fsig/: cli.py
src/panel/: param_panel.py  plot_panel.py
src/tdms_viewer/: cli.py  gui.py
src/tdms_viewer/core/: __init__.py  components.py  plot.py  plotstack.py
src/tdms_viewer/panel/: action_panel.py  param_panel.py  plot_panel.py  selecter.py
